--- a/index.html
+++ b/index.html
@@ -11,6 +11,25 @@
             <hr>
         </h1>
         <div class="Posts">
+            <div> <!-- POST 3 -->
+                <h1>
+                    Minecraft LIVE tiene mucho que ENSEÑAR <span class="Post-1-date">- October 16, 2026 (13:25)</span>
+                </h1>
+
+                <p>
+                    Hoy, a las 17:00 CEST+2 se celebrará la nueva entrega de Minecraft LIVE, en la que se enseñará
+                    todo lo que acompañará a la versión 1.21 de MINECRAFT.
+                </p>
+                <div style="text-align: center;">
+                    <a href="https://www.youtube.com/watch?v=DnY5xz11lR0&ab_channel=Minecraft" target="_blank"><img style="width: 500px; padding-top: 5px; text-align: center;" src="https://cdn.mos.cms.futurecdn.net/pUD2W4AvNYM9uuK5m4QK4F.jpg"></img></a>
+                </div>
+                <p>
+                    Teniendo en cuenta que la última versión de Minecraft fué una que no fué muy aclamada por al comunidad por la baja cantidad de contenido
+                    añadido, y el poco esfuerzo por parte de mojang para hacer de Minecraft lo mejor, esperamos que este año SÍ tengan contenido
+                    que ofrecer, que nos sorprendan y nos devuelvan el sentimiento de que minecraft puede volver a ser ese juego por él que nos
+                    enamoramos aquél día.
+                </p>
+            </div>
             <div> <!-- POST 2 -->
                 <h1>
                     Minecraft LIVE tiene mucho que ENSEÑAR <span class="Post-1-date">- October 16, 2026 (13:25)</span>
