--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <hr>
         </h1>
         <div class="Posts">
+            <div style="padding-top: 18px; text-align: center;">
+                <h1 style="padding-bottom: 25px; font-size: 35px; color: rgb(255, 90, 90);">
+                    🔴 STREAM OFICIAL de MOJANG (Minecraft LIVE) 🔴</span>
+                </h1>
+                <iframe style="box-shadow: 0px 0px 5px black;" width="1280" height="720" src="https://www.youtube.com/embed/DnY5xz11lR0" title="Minecraft Live 2023 - EVENTO EN DIRECTO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
             <div> <!-- POST 2 -->
                 <h1>
                     Minecraft LIVE tiene mucho que ENSEÑAR <span class="Post-1-date">- October 16, 2026 (13:25)</span>
@@ -48,6 +54,7 @@
                 </p>
             </div>
         </div>
+        
         <hr>
         <p style="text-align: center; color: rgb(31, 28, 23); font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight: bold; margin-bottom: 2px;">~blog creado para expresar mis locuras y pensamientos~</p>
         <p style="text-align: center; color: rgb(31, 28, 23); font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; font-weight: bold; margin-top: 2px;">Deywark / 2023</p>
