--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <h1 style="padding-bottom: 25px; font-size: 35px; color: rgb(255, 90, 90);">
                     🔴 STREAM OFICIAL de MOJANG (Minecraft LIVE) 🔴</span>
                 </h1>
-                <iframe style="box-shadow: 0px 0px 5px black;" width="1280" height="720" src="https://www.youtube.com/embed/DnY5xz11lR0" title="Minecraft Live 2023 - EVENTO EN DIRECTO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe style="box-shadow: 0px 0px 5px black; max-width: 95%;" width="1280" height="720" src="https://www.youtube.com/embed/DnY5xz11lR0" title="Minecraft Live 2023 - EVENTO EN DIRECTO" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
             <div> <!-- POST 2 -->
                 <h1>
