--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="Main-DIV">
         <h1 class="Botones" >
-            <a class="Antonio-Button" href="https://www.youtube.com/channel/UCyZcdjzVO-4WAKkPKRez1Aw">Deywark - Blog Personal</a>
+            <a class="Antonio-Button" href="https://www.youtube.com/channel/UCyZcdjzVO-4WAKkPKRez1Aw">Deywark - Blog Personal | </a>
+            <a href="https://twitter.com/DeywarkFTW"><img style="width: 36px; vertical-align: middle;" src="https://i.imgur.com/LrxvabF.png"></a>
             <hr>
         </h1>
         <div class="Posts">
