--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="Main-DIV">
         <h1 class="Botones" >
             <a class="Antonio-Button" href="https://www.youtube.com/channel/UCyZcdjzVO-4WAKkPKRez1Aw">Deywark - Blog Personal | </a>
-            <a href="https://twitter.com/DeywarkFTW"><img style="width: 36px; vertical-align: middle;" src="/imgs/twitter-logo.png"></a>
+            <a href="https://twitter.com/DeywarkFTW"><img style="width: 36px; vertical-align: middle;" src="imgs/twitter-logo.png"></a>
             <hr>
         </h1>
         <div class="Posts">
