--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     todo lo que acompañará a la versión 1.21 de MINECRAFT.
                 </p>
                 <div style="text-align: center;">
-                    <a href="https://www.youtube.com/watch?v=DnY5xz11lR0&ab_channel=Minecraft" target="_blank"><img style="width: 500px; padding-top: 5px; text-align: center;" src="https://cdn.mos.cms.futurecdn.net/pUD2W4AvNYM9uuK5m4QK4F.jpg"></img></a>
+                    <a href="https://www.youtube.com/watch?v=DnY5xz11lR0&ab_channel=Minecraft" target="_blank"><img style="max-width: 95%; width: 500px; padding-top: 5px; text-align: center;" src="https://cdn.mos.cms.futurecdn.net/pUD2W4AvNYM9uuK5m4QK4F.jpg"></img></a>
                 </div>
                 <p>
                     Teniendo en cuenta que la última versión de Minecraft fué una que no fué muy aclamada por al comunidad por la baja cantidad de contenido
