--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
             <div> <!-- POST 2 -->
                 <h1>
-                    Minecraft LIVE tiene mucho que ENSEÑAR <span class="Post-1-date">- October 16, 2026 (13:25)</span>
+                    Minecraft LIVE tiene mucho que DEMOSTRAR <span class="Post-1-date">- October 16, 2026 (13:25)</span>
                 </h1>
 
                 <p>
