--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     css
                 </p>
                 <p>
-                    Tenéis toda la info en este <a style="text-decoration: none; color: rgb(255, 88, 88); text-shadow: 0px 2px 15px black;" href="https://www.w3schools.com/howto/howto_css_style_hr.asp">link</a> nos vemos en el
+                    Tenéis toda la info en este <a style="text-decoration: none; color: rgb(112, 94, 255); text-shadow: 0px 2px 15px rgb(231, 231, 231);" href="https://www.w3schools.com/howto/howto_css_style_hr.asp">link</a> nos vemos en el
                     siguiente post chico/as ^^
                 </p>
             </div>
